# tinygraph

./: Cargo.toml  README.md  tags
doc-legacy/: README
doc-legacy/clap-derive/: Cargo.toml
doc-legacy/clap-derive/src/: main.rs
src/: app.rs  cli.rs  error.rs  lib.rs  query.rs  sql_queries.rs  tg_data.rs  tg_query.rs  tgconfig.rs
src/sqlite/: database.rs  mod.rs  sql.rs
