[package]
name = "tinygraph"
version = "0.1.0"
authors = ["Caelia R Chapin <crc@caelia.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28", optional = true }
sophia_jsonld = "0.7"
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
