[package]
name = "tinygraph"
version = "0.1.0"
authors = ["Caelia R Chapin <crc@caelia.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.38"
sophia_jsonld = "0.9"
clap = { version = "4.5", features = ["derive"] }
prepona = "0.1"
anyhow = "1.0"
